--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     </span>
    </div>
    <nav class="flex space-x-6 items-center text-gray-700 font-sans">
-    <a class="bg-blue-400 text-white px-3 py-1 rounded-md text-xs font-semibold select-none" href="Day1.html">
+    <a class="bg-blue-400 text-white px-3 py-1 rounded-md text-xs font-semibold select-none" href="https://day4-vert.vercel.app/">
      Home
     </a>
-    <a class="hover:text-gray-900 cursor-pointer select-none text-xs" href="day8shop.html">
+    <a class="hover:text-gray-900 cursor-pointer select-none text-xs" href="https://day5-sigma.vercel.app/">
      Shop
     </a>
-    <a class="flex items-center space-x-1 hover:text-gray-900 cursor-pointer select-none text-xs" href="Day7.html">
+    <a class="flex items-center space-x-1 hover:text-gray-900 cursor-pointer select-none text-xs" href="https://day6-iota.vercel.app/">
      <i class="far fa-calendar-alt text-xs">
      </i>
      <span>
